# schousware

./: .gitignore  Cargo.toml  README.md
c4/: .gitignore
c4/src/: main.rs
c4/src/domains/: c4server.rs  command.rs  infected.rs
c4/src/interface/: app.rs  infected_menu.rs  user_menu.rs
c4/src/repos/: database.rs
c4/src/routes/: infected.rs  mod.rs
c4/src/services/: mod.rs
src/: main.rs
src/domains/: c4server.rs  command.rs  file_server.rs  infected.rs  mod.rs  users.rs
src/interface/: app.rs  infected_menu.rs  main_menu.rs  mod.rs  stats_menu.rs
src/repos/: database.rs
src/routes/: infected.rs  users.rs
src/services/: configuration.rs  payload.rs
